roles/minio/files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myminio-console
  namespace: tenant-ns
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: minio.com
      http:
        paths:
          - path: /console
            pathType: Prefix
            backend:
              service:
                name: myminio-console
                port:
                  number: 9443

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 443

          - path: /hl
            pathType: Prefix
            backend:
              service:
                name: myminio-hl
                port:
                  number: 9000
